feat(title/content): add page title variation

--- a/src/patternfly/components/Content/content--element.hbs
+++ b/src/patternfly/components/Content/content--element.hbs
@@ -1,7 +1,10 @@
 <{{content--element--type}} class="{{#unless content--element--ExcludeClass}}{{pfv}}content--{{content--element--type}}{{/unless}}
-  {{~#if content--element--IsEditorial}} pf-m-editorial{{/if}}
-  {{~#if content--element--IsPlain}} pf-m-plain{{/if}}
-  {{~#if content--element--modifier}} {{content--element--modifier}}{{/if}}"
+  {{setModifiers
+    content--element--IsEditorial="pf-m-editorial"
+    content--element--IsPlain="pf-m-plain"
+    content--element--IsPageTitle="pf-m-page-title"
+    content--element--modifier=content--element--modifier
+  }}"
   {{#if content--element--attribute}}
     {{{content--element--attribute}}}
   {{/if}}>
