--- a/src/patternfly/components/Content/content--kitchen-sink.hbs
+++ b/src/patternfly/components/Content/content--kitchen-sink.hbs
@@ -1,4 +1,4 @@
-{{#> content--element content--element--type="h1"}}Hello world{{/content--element}}
+{{#> content--element content--element--type="h1" content--element--IsPageTitle=true}}Hello world{{/content--element}}
 {{#> content--element content--element--type="p"}}Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub works as well!{{/content--element}}
 {{#> content--element content--element--type="h2"}}Second level{{/content--element}}
 {{#> content--element content--element--type="p"}}Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.{{/content--element}}
