--- a/src/patternfly/components/Page/examples/Page.css
+++ b/src/patternfly/components/Page/examples/Page.css
@@ -1,5 +1,5 @@
 /* Because the page component has height:100dvh, override it just for the embedded examples */
-.ws-preview-html .pf-v6-c-page {
+[id^=ws-core-c-page-] .ws-preview-html .pf-v6-c-page {
   height: min-content;
   min-height: 30em;
 }
